fix: adjust scss structure for ApartmentCard, Collapse, Footer, HomeBanner, and Home components for consistency and improved layout

--- a/src/components/ApartmentCard/ApartmentCard.scss
+++ b/src/components/ApartmentCard/ApartmentCard.scss
@@ -1,6 +1,5 @@
 .apartment-card {
   position: relative;
-//  width: clamp(335px, 100%, 100%);
   height: 255px;
   overflow: hidden;
   border-radius: 10px;
@@ -44,15 +43,20 @@
     font-size: 18px;
     font-weight: bold;
   }
-}
 
-@media (min-width: 769px) and (max-width: 1440px) {
-  .apartment-card {
+  @media (min-width: 769px) and (max-width: 1440px) {
     height: 340px;
-  }
 
-  .apartment-card__cover {
-    height: 340px;
-    max-width: 340px;
+    &__cover {
+      height: 340px;
+      max-width: 340px;
+    }
+
+    span {
+      text-align: left;
+      text-overflow: ellipsis;
+      white-space: normal;
+      width: 69%;
+    }
   }
 }
