--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -3,49 +3,52 @@
   margin-bottom: 13px;
   width: 100%;
 
-  &.collapsed .collapse__icon {
-    transform: rotate(0);
+  &.collapsed {
+    .collapse__icon {
+      transform: rotate(0);
+    }
   }
 
-  &.expand .collapse__icon {
-    transform: rotate(180deg);
+  &.expand {
+    .collapse__icon {
+      transform: rotate(180deg);
+    }
+
+    .collapse__content {
+      max-height: 500px;
+      padding: 8px;
+    }
   }
 
-}
-
-.collapse__title {
-  padding: 8px;
-  background-color: #ff6060;
-  color: white;
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  cursor: pointer;
-  font-size: 13px;
-}
-
-.collapse__icon {
-  transition: transform 150ms ease-in-out;
-}
-
-.collapse__content {
-  background-color: #FBFBFB;
-  overflow: hidden;
-  max-height: 0;
-  margin: 0;
-  padding: 0 8px;
-  border-radius: 0 0 5px 5px;
-  transition: max-height 0.3s ease-in-out, padding 0.3s ease-in-out;
-
-  p, ul {
-    margin: 0.5rem 0;
+  &__title {
+    padding: 8px;
+    background-color: #ff6060;
+    color: white;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    cursor: pointer;
+    font-size: 13px;
   }
-}
 
-.collapse-container.expand .collapse__content {
-  max-height: 500px; // suffisamment grand pour ton contenu
-  padding: 8px;
+  &__icon {
+    transition: transform 150ms ease-in-out;
+  }
+
+  &__content {
+    background-color: #fbfbfb;
+    overflow: hidden;
+    max-height: 0;
+    margin: 0;
+    padding: 0 8px;
+    border-radius: 0 0 5px 5px;
+    transition: max-height 0.3s ease-in-out, padding 0.3s ease-in-out;
+
+    p, ul {
+      margin: 0.5rem 0;
+    }
+  }
 }
 
 @keyframes collapse {
