--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -20,19 +20,18 @@
 
     span {
       display: block;
+
+      &:nth-of-type(1) {
+        letter-spacing: 0.5px;
+      }
     }
 
-    span:nth-of-type(1) {
-      letter-spacing: 0.5px;
-    }
-  }
-}
+    @media (min-width: 769px) and (max-width: 1440px) {
+      font-size: 24px;
 
-@media (min-width: 769px) and (max-width: 1440px) {
-  .footer__text {
-    font-size: 24px;
-    span {
-      display: inline;
+      span {
+        display: inline;
+      }
     }
   }
 }
