--- a/src/components/HomeBanner/HomeBanner.scss
+++ b/src/components/HomeBanner/HomeBanner.scss
@@ -31,7 +31,7 @@
     height: 111px;
     object-fit: cover;
     border-radius: 10px;
-    filter: brightness(0.4);
+    filter: brightness(0.5);
     box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.9);
   }
 }
