--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,30 +1,23 @@
 .apartment-container {
   width: 100%;
   display: flex;
-  background: #f6F6F6;
+  background: #f6f6f6;
   justify-content: center;
-}
-
-.apartment-list {
-  justify-content: center;
-  flex-direction: column;
-  gap: 30px;
-}
-
-@media (min-width: 769px) and (max-width: 1440px) {
-
-  .apartment-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background: #f6F6F6;
-    border-radius: 25px;
-  }
 
   .apartment-list {
-    justify-content: space-around;
-    flex-direction: row;
-    padding: 45px 0;
-    gap: 45px 1px;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  @media (min-width: 769px) and (max-width: 1440px) {
+    border-radius: 25px;
+
+    .apartment-list {
+      justify-content: space-around;
+      flex-direction: row;
+      padding: 50px 0;
+      gap: 45px 1px;
+    }
   }
 }
